improved home design

--- a/client/earlybird/styles.css
+++ b/client/earlybird/styles.css
@@ -1,11 +1,9 @@
 .earlybird {
   position: absolute;
+  top: 20%;
+  left: 0;
+  width: 100%;
   background: rgba(0, 0, 0, .6);
-  width: 75%;
-  margin: auto;
-  padding: 30px 50px;
-  top: 260px;
-  left: 12.5%;
   color: #fff;
 }
 .earlybird p {
@@ -16,19 +14,44 @@
   width: 73%;
   font-size: 1.2em;
 }
-
-.earlybird form input[type=submit] {
+.earlybird form input[type=email] {
   border: 1px solid #ccc;
-  background-color: rgba(243, 174, 115, .85);
-  color: #fff;
-  text-transform: uppercase;
-  width: 25%;
-  margin-left: 1%;
+  width: 73%;
+  font-size: 1.2em;
 }
 
-.earlybird form input {
-  font: inherit;
-  padding: 15px 30px;
-  height: 60px;
-  display: inline;
+
+@media (min-width: 480px) {
+  .earlybird {
+    position: absolute;
+    width: 75%;
+    margin: auto;
+    padding: 30px 50px;
+    top: 260px;
+    left: 12.5%;
+  }
+  .earlybird p {
+    font-size: 1.2em;
+  }
+  .earlybird p {
+    font-size: 1.2em;
+  }
+  .earlybird form input[type=email] {
+    width: 73%;
+  }
+  .earlybird form input[type=submit] {
+    border: 1px solid #ccc;
+    background-color: rgba(243, 174, 115, .85);
+    color: #fff;
+    text-transform: uppercase;
+    width: 25%;
+    margin-left: 1%;
+  }
+
+  .earlybird form input {
+    font: inherit;
+    padding: 15px 30px;
+    height: 60px;
+    display: inline;
+  }
 }
