--- a/client/layout.css
+++ b/client/layout.css
@@ -8,28 +8,26 @@ html, body {
 * {
   box-sizing: border-box;
 }
+
+.home {
+  background-image: url("images/homebackground.jpg");
+  background-size: cover;
+}
 .home > header {
-  width: 100%;
+  width: 75%;
   height: 100%;
-  overflow: hidden;
-  position: relative;
-}
-.home > header > img {
-  width: 100%;
-  height: 100%;
-  filter: brightness(50%);
-}
-.home > header > h1 {
-  font-size: 5em;
-  top: 50px;
-}
-.home > header > h2 {
-  top: 170px;
+  margin: 0 auto;
+  padding-top: 8em;
 }
 .home > header > h1,
 .home > header > h2 {
-  position: absolute;
-  left: 12.5%;
   color: #fff;
   text-shadow: 0 0 5px #000;
+}
+.home > header > h1 {
+  font-size: 5em;
+  margin: 0;
+}
+.home > header > h2 {
+  margin-top: 0;
 }
