--- a/client/locations/list.css
+++ b/client/locations/list.css
@@ -13,8 +13,15 @@ paper-icon-button.add {
   right: 1%;
 }
 paper-icon-button.add #icon {
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
+}
+paper-icon-button.add {
+  background-color: rgba(250, 250, 250, .8);
+  border-radius: 60px;
+}
+paper-icon-button.add[pressed] {
+  background-color: transparent;
 }
 paper-icon-button.add::shadow #ripple {
   color: #900;
